--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "config":{
-        "token":"NTQyNzc4NzY4OTEwMTg4NTU0.XNY3hA.ZbDSJSHBWjVvIluuUYUx-D7wR3s"
+        "token":""
     },
 
     "extensions": [
