--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "config":{
-        "token":"v"
+        "token":"NTQyNzc4NzY4OTEwMTg4NTU0.XS5-KA.ys_odCyhp2pDJc4GE8BobwA6b80"
     },
 
     "extensions": [
