--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "config":{
-        "token":"NTQyNzc4NzY4OTEwMTg4NTU0.XkccyQ.rCCFwVjMdpWGg6usiopokvid37E"
+        "token":"NTQyNzc4NzY4OTEwMTg4NTU0.Xk8L6g._9bgpgyZvGXboQg6--nKvulR5r8"
     },
 
     "extensions": [
