Added prefix in config.json

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "config":{
-        "token":"NTQyNzc4NzY4OTEwMTg4NTU0.Xk8L6g._9bgpgyZvGXboQg6--nKvulR5r8"
+        "token":"NTQyNzc4NzY4OTEwMTg4NTU0.XlMqVA.F6jk0OAsf6rmDzX2d-BTHjF16go",
+        "prefix": "~"
     },
 
     "extensions": [
