Created plugins index file

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "config":{
-        "token":"NTQyNzc4NzY4OTEwMTg4NTU0.XlMt6w.GwmPM6qj_hRA4rFnSFcvqI0Y3yo",
+        "token":"",
         "prefix": "~"
     },
 
