--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,11 +2,12 @@
 name = "eb2"
 version = "0.1.0"
 description = ""
-authors = ["Luiz A F Gomes <luizgomes749@gmail.com>"]
+authors = ["Luiz A F Gomes"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
 "discord.py" = "^1.3.3"
+profanity-check = "^1.0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
