Added roles management cog

--- a/eb2/config.json
+++ b/eb2/config.json
@@ -1,6 +1,6 @@
 {
     "config":{
-        "token":"YOUR TOKEN",
+        "token":"NTQyNzc4NzY4OTEwMTg4NTU0.XoqFWw.6PCAj9McHWftWTgkTrDG5ZBiD3k",
         "default_prefix": "~"
     },
 
