Preparing to create the API

--- a/eb2/config.json
+++ b/eb2/config.json
@@ -1,7 +1,7 @@
 {
     "config":{
         "token":"NTQyNzc4NzY4OTEwMTg4NTU0.XoqFWw.6PCAj9McHWftWTgkTrDG5ZBiD3k",
-        "default_prefix": "~"
+        "default_prefix": "eb!"
     },
 
     "extensions": [
