--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ profanity-check = "^1.0.3"
 colorama = "^0.4.3"
 django = "^3.0.5"
 django-rest-framework = "^0.1.0"
+sqlalchemy = "^1.3.16"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
