Added ban voting

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 discord-py = "*"
 sqlalchemy = "*"
+mysqlclient = {path = "./dependencies/mysqlclient-1.4.6-cp38-cp38-win32.whl"}
+colorama = "*"
 
 [requires]
 python_version = "3.8"
