--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
 
     "extensions": [
         "extensions.chat",
-        "extensions.roles"
+        "extensions.roles",
+        "extensions.management"
     ]
 }
