--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "config":{
-        "token":"NTQyNzc4NzY4OTEwMTg4NTU0.XoqFWw.6PCAj9McHWftWTgkTrDG5ZBiD3k",
+        "token":"",
         "default_prefix": "-",
         "db": "mysql://EB2SQL:password@127.0.0.1:3306/expertisebot"
     },
